--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -181,7 +181,7 @@
           </div>
         </div>
         <div class="footer-section">
-          <h3>Quick Links</h3>
+          {% comment %} <h3>Quick Links</h3> {% endcomment %}
           <ul class="footer-links">
             <li><a href="#">Home</a></li>
             <li><a href="#">About Us</a></li>
@@ -189,7 +189,7 @@
           </ul>
         </div>
         <div class="footer-section">
-          <h3>Resources</h3>
+          {% comment %} <h3>Resources</h3> {% endcomment %}
           <ul class="footer-links">
             <li><a href="#">Documentation</a></li>
             <li><a href="#">API Reference</a></li>
@@ -198,7 +198,7 @@
           </ul>
         </div>
         <div class="footer-section">
-          <h3>Contact Us</h3>
+          {% comment %} <h3>Contact Us</h3> {% endcomment %}
           <p>123 Road Safety Street<br />Maintenance City, MC 12345</p>
           <p>Email: info@potholedetector.com<br />Phone: (123) 456-7890</p>
         </div>
