--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -21,8 +21,8 @@
       <nav>
         <ul>
           <li><a href="#" class="active">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          {% comment %} <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li> {% endcomment %}
         </ul>
       </nav>
     </header>
@@ -106,7 +106,7 @@
             worldwide.
           </p>
           <div class="social-links">
-            <a href="#" class="social-icon">
+            <a href="https://github.com/OmdenaAI/KolkataIndiaChapter_AutomatedPotholeDetection/tree/main" class="social-icon" target="_blank" rel="noopener noreferrer">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -118,12 +118,23 @@
                 stroke-linecap="round"
                 stroke-linejoin="round"
               >
-                <path
-                  d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"
-                ></path>
+                <path d="M9 19c-5 1.5-5-2.5-7-3
+                         m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61
+                         c3.14-.35 6.44-1.54 6.44-7
+                         A5.44 5.44 0 0 0 20 4.77
+                         A5.07 5.07 0 0 0 19.91 1
+                         S18.73.65 16 2.48
+                         a13.38 13.38 0 0 0-7 0
+                         C6.27.65 5.09 1 5.09 1
+                         A5.07 5.07 0 0 0 5 4.77
+                         a5.44 5.44 0 0 0-1.5 3.78
+                         c0 5.42 3.3 6.61 6.44 7
+                         A3.37 3.37 0 0 0 9 20.13V24" />
               </svg>
             </a>
-            <a href="#" class="social-icon">
+            
+            </a>
+            <a href="https://www.omdena.com/" class="social-icon" target="_blank" rel="noopener noreferrer">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -135,12 +146,13 @@
                 stroke-linecap="round"
                 stroke-linejoin="round"
               >
-                <path
-                  d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"
-                ></path>
+                <circle cx="12" cy="12" r="10" />
+                <line x1="2" y1="12" x2="22" y2="12" />
+                <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z" />
               </svg>
             </a>
-            <a href="#" class="social-icon">
+            
+            <a href="https://www.instagram.com/omdenaglobal/" class="social-icon">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -159,7 +171,7 @@
                 <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
               </svg>
             </a>
-            <a href="#" class="social-icon">
+            <a href="https://www.linkedin.com/company/omdena/" class="social-icon">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -179,28 +191,6 @@
               </svg>
             </a>
           </div>
-        </div>
-        <div class="footer-section">
-          {% comment %} <h3>Quick Links</h3> {% endcomment %}
-          <ul class="footer-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </div>
-        <div class="footer-section">
-          {% comment %} <h3>Resources</h3> {% endcomment %}
-          <ul class="footer-links">
-            <li><a href="#">Documentation</a></li>
-            <li><a href="#">API Reference</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Support</a></li>
-          </ul>
-        </div>
-        <div class="footer-section">
-          {% comment %} <h3>Contact Us</h3> {% endcomment %}
-          <p>123 Road Safety Street<br />Maintenance City, MC 12345</p>
-          <p>Email: info@potholedetector.com<br />Phone: (123) 456-7890</p>
         </div>
         <div class="copyright">
           &copy; 2025 Pothole Detector. All rights reserved.
